# masterarbeit

./: .gitignore  ISIC_fold_0_train_profile.html  ISIC_fold_1_train_profile.html  ISIC_fold_1_val_profile.html  ISIC_fold_2_train_profile.html  ISIC_fold_3_train_profile.html  ISIC_fold_3_val_profile.html  LICENSE  Makefile  Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-BatchNormCNN-batchsize-32-lr-0.001.csv  Multi-ValMetrics20231030_ISIC_ccr_corrected_two_labels-model-BatchNormCNN-batchsize-32-lr-0.001.csv  README.md  config.py  data_preprocessing.py  environment.yml  genomic_main.py  main.py  main_double_skf.py  metadata.py  poison_cifar10-train.npz  requirements.txt  setup.cfg  setup.py
backdoor/: cifar.py  cifar10-class-accuracy.csv  label_consistent.py  simple.py
conf/: config.yaml
data/: __init__.py  create_npz.py  dataloader.py  dataset.py  manager.py
docs/: Makefile  conf.py  index.rst  make.bat
experiments/: Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-googlenet-batchsize-32-lr-0.0001.csv  Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-googlenet-batchsize-64-lr-0.001.csv  Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-resnet152-batchsize-64-lr-0.0001.csv  Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-resnet50-finetuning-batchsize-32-lr-0.001.csv  Multi-TrainMetrics20231030_ISIC_ccr_corrected_two_labels-model-resnet50-finetuning-batchsize-64-lr-0.0001.csv  Multi-ValMetrics20231030_ISIC_ccr_corrected_two_labels-model-googlenet-batchsize-32-lr-0.0001.csv  (+4 more)
models/: models.py
(+1357 files in other folders)
