[metadata]
name = Masterarbeit
version = 0.1.0
description = package for my masters thesis
author = Tom Liessmann
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    torch>=2
    torchvision>=0.15
    torchmetrics>=0.11
    tensorboard>=2
    numpy>=1
    pandas>=2
    matplotlib>=3
    tqdm>=4
    hydra-core>=1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
Masterarbeit = py.typed

[flake8]
max-line-length = 160